--- a/src/app/multLojas/lojas/lojas.component.html
+++ b/src/app/multLojas/lojas/lojas.component.html
@@ -2,7 +2,8 @@
     <div class="too">
         <div class="t1">
             <div class="logo">
-                <img style="width: 80px;" src="./assets/images/others/logo.png" alt="" srcset="">
+                <img class="logodesktop" style="width: 80px;" src="./assets/images/others/logo.png" alt="" srcset="">
+                <img class="logomobal" style="width: 80px;" src="../../../assets/images/others/logoWhite.png" alt="" srcset="">
             </div>
             <a href="javascript:;" style="text-decoration: none;" class="ender" (click)="seleionarEndereco()">
                 <mat-icon class="mat-18">person_pin_circle</mat-icon>
@@ -162,7 +163,8 @@
         <div class="afot">
             <div class="fot">
                 <div class="logo">
-                    <img style="width: 80px;" src="./assets/images/others/logo.png" alt="" srcset="">
+                    <img style="width: 80px;" src="./assets/images/others/logo.png" style="border-radius: 5px;
+                    width: 45px;">
                 </div>
                 <div class="fotDeac">
                     {{ servico.descFotter }}
