--- a/src/app/inicio/home/home.component.css
+++ b/src/app/inicio/home/home.component.css
@@ -1,7 +1,6 @@
 .a {
     height: 100vh;
-    background: #f5f5f5;
-    background-image: url('../../../assets/images/others/bg1.png');
+    background: #e11212;
 }
 
 .b {
@@ -23,13 +22,13 @@
     font-size: 35px;
     text-align: center;
     font-weight: 600;
-    color: black;
+    color: white;
 }
 
 .e {
     font-size: 20px;
     text-align: center;
-    color: black;
+    color: white;
 }
 
 .input {
@@ -51,7 +50,7 @@
 }
 
 .btSearh {
-    background: #dc2e21;
+    background: #ffc107;
     height: 60px;
     font-size: 16px;
     font-weight: 600;
@@ -61,6 +60,11 @@
     text-align: center;
     width: 160px;
     border-radius: 5px;
+    color: #e11212;
+}
+
+.eent {
+    color: white;
 }
 
 .f {
@@ -90,8 +94,5 @@ a {
     }
     .g {
         width: 94%;
-    }
-    .a {
-        background: #f9f9f9;
     }
 }
