--- a/src/app/multLojas/entrar/entrar.component.html
+++ b/src/app/multLojas/entrar/entrar.component.html
@@ -10,13 +10,15 @@
             Insira os dados de sua conta
         </div>
         <div class="c">
-            <div> <input formControlName="email" class="in" placeholder="Email ou telefone" type="email" name="" id=""> </div>
-            <div> <input formControlName="senha" class="in" placeholder="Digite sua senha" type="password" name="" id=""> </div>
+            <div> <input (keydown.enter)="entrar()" formControlName="email" class="in" placeholder="Email ou telefone" type="email" name="" id=""> </div>
+            <div> <input (keydown.enter)="entrar()" formControlName="senha" class="in" placeholder="Digite sua senha" type="password" name="" id=""> </div>
             <div class="gabiel"> <a href="javascript:;" routerLink="/recuperar-cadastro">Esqueceu sua senha</a> </div>
             <div style="margin-top: 20px;">
                 <button style="width: 100%;" mat-raised-button color="warn" [disabled]="statusBt" (click)="entrar()">Entrar</button>
             </div>
         </div>
+
+        <app-facebook></app-facebook>
 
 
         <div style="margin-top: 20px;">
