--- a/src/app/multLojas/lojas/icone-loja/icone-loja.component.html
+++ b/src/app/multLojas/lojas/icone-loja/icone-loja.component.html
@@ -29,7 +29,7 @@
         <div class="desc2">
             <ngx-skeleton-loader animation="progress" *ngIf="!item.nome"></ngx-skeleton-loader>
             <!--mínimo R$10,00-->
-            <span *ngIf="item.nome"> Pedido min. {{ item.pedidomin | currency:'BRL':true }}</span>
+            <span *ngIf="item.nome"> Pedido min. {{ item.pedidomin | currency:'BRL' }}</span>
         </div>
         <div class="desc2">
             <!--Coreia - Juazeiro-->
@@ -45,7 +45,7 @@
             <div>
                 <!--Frete R$8,00-->
                 <ngx-skeleton-loader animation="progress" *ngIf="!item.nome"></ngx-skeleton-loader>
-                <span *ngIf="item.nome">{{ item.taxa_entrega | currency:'BRL':true }} </span>
+                <span *ngIf="item.nome">{{ item.taxa_entrega | currency:'BRL' }} </span>
             </div>
         </div>
     </div>
