--- a/src/app/payment-steps/addfp/addfp.component.html
+++ b/src/app/payment-steps/addfp/addfp.component.html
@@ -18,16 +18,13 @@
                 {{ data.nome }}
 
             </div>
-            <div style="margin-top: 5px;">
-                <mat-form-field class="inputfp" [formGroup]="form">
-                    <mat-label> Valor a pagar </mat-label>
-                    <input matInput placeholder="R$0,00" type="tel" formControlName="valor" mask="separator.2" thousandSeparator="." autocomplete="off" (keydown.enter)="onClickConfirm(data)">
-                </mat-form-field>
+            <div style="margin-top: 5px;" [formGroup]="form">
+                <input currencyMask class="styleFP" placeholder="Valor a pagar: R$0,00" type="tel" formControlName="valor" (keydown.enter)="onClickConfirm(data)">
 
-                <mat-form-field class="inputfp" [formGroup]="form" style="margin-top:5px;" *ngIf="data.nome === 'Dinheiro'">
-                    <mat-label> Troco para </mat-label>
-                    <input matInput placeholder="R$0,00" type="tel" formControlName="troco" mask="separator.2" thousandSeparator="." autocomplete="off" (keydown.enter)="onClickConfirm(data)">
-                </mat-form-field>
+                <div style="margin-top: 20px;" *ngIf="data.nome === 'Dinheiro'">
+                    <div style="font-size: 12px;">Troco</div>
+                    <input currencyMask class="styleFPTroco" placeholder="Troco para: R$0,00" type="tel" formControlName="troco" (keydown.enter)="onClickConfirm(data)">
+                </div>
             </div>
             <div class="a-itens-pay" *ngFor="let item of data.itens">
 
