--- a/src/app/inicio/bag/bag.component.html
+++ b/src/app/inicio/bag/bag.component.html
@@ -21,7 +21,7 @@
     <div *ngIf="servbag.getQntItensCar() > 0" class="col-sm-12 inbag">
         <div style="text-align: initial;
         color: #5f5d5d;
-        padding-top: 15px;"> Pedido </div>
+        padding-top: 15px;"> Seu pedido </div>
         <div class="bsgin"> {{ service.getDadosEmpresa().nome }} </div>
 
 
@@ -73,7 +73,7 @@
 
             <div class="cupom-01">
                 <div class="cupom-02">Cupom</div>
-                <div class="cupom-03">Código de cupom</div>
+                <div class="cupom-03">Seleionar cupom</div>
             </div>
 
         </div>
