--- a/src/app/inicio/item-details/item-details.component.html
+++ b/src/app/inicio/item-details/item-details.component.html
@@ -124,7 +124,7 @@
 
 
                     <button class="btaddcCell" mat-raised-button color="primary" (click)="onclickAddCar(observacaoUsuario.value)">
-            <mat-icon>add_shopping_cart</mat-icon> {{ itemCatalogo.total | currency:'BRL':true }} Adicionar
+            <mat-icon>add_shopping_cart</mat-icon> {{ itemCatalogo.total | currency:'BRL' }} Adicionar
           </button>
                 </div>
 
