--- a/src/app/multLojas/lojas/lojas.component.html
+++ b/src/app/multLojas/lojas/lojas.component.html
@@ -102,7 +102,7 @@
 
 
 
-                <carousel class="carouselLOJAS" style="z-index: 1;" [cellWidth]="'100%'" [arrows]="arrowStatusLojas">
+                <carousel class="carouselLOJAS" style="z-index: 1;" [cellWidth]="'100%'" [arrows]="arrowStatusLojas" [height]="heightCarrou">
 
                     <div class="carousel-cell">
                         <div class="ffilt">
