--- a/src/app/payment-steps/cupons-list/cupons-list.component.html
+++ b/src/app/payment-steps/cupons-list/cupons-list.component.html
@@ -1,8 +1,11 @@
 <div class="col-sm-12 mp0L">
     <div class="c1">
-        <button mat-icon-button (click)="bsgServ.showCupom(false)">
-    <mat-icon>keyboard_arrow_left</mat-icon>
-  </button> CUPONS
+
+
+
+        <button mat-icon-button color="warn" (click)="bsgServ.showCupom(false)">
+    <mat-icon>keyboard_arrow_left</mat-icon> CUPONS
+  </button>
 
     </div>
 
