--- a/src/app/payment-steps/addfp/addfp.component.css
+++ b/src/app/payment-steps/addfp/addfp.component.css
@@ -4,14 +4,15 @@
     font-size: 14px;
     background: #ffffff;
     margin-top: 3px;
-    border: 1px solid #dad2d2;
-    padding: 20px;
+    padding: 0px;
     color: black;
     display: grid;
     grid-template-columns: 1fr;
     align-items: center;
     border-left: none;
     border-right: none;
+    margin-top: 7px;
+    padding-top: 20px;
 }
 
 .styleFP {
@@ -39,8 +40,6 @@
 .abt {
     padding-top: 20px;
     justify-content: space-between;
-    display: grid;
-    gap: 8px;
     text-align: center;
 }
 
@@ -92,4 +91,15 @@
     gap: 10px;
     font-size: 18px;
     color: #5a5a5a;
+}
+
+@media (max-width:600px) {
+    .btconfi {
+        width: 100%;
+        height: 47px;
+    }
+    .invalue {
+        text-align: right;
+        font-size: 40px;
+    }
 }
