--- a/src/app/payment-steps/addfp/addfp.component.html
+++ b/src/app/payment-steps/addfp/addfp.component.html
@@ -1,5 +1,5 @@
 <div class="dfe">
-    <div>Pagamento</div>
+    <div>Pagamento em {{ data.nome }}</div>
 
     <div>
         <button mat-icon-button mat-dialog-close>
@@ -15,15 +15,16 @@
     <div class="item">
         <div>
             <div class="nonome">
-                {{ data.nome }}
+
+                Valor a pagar
 
             </div>
             <div style="margin-top: 5px;" [formGroup]="form">
-                <input currencyMask class="styleFP" placeholder="Valor a pagar: R$0,00" type="tel" formControlName="valor" (keydown.enter)="onClickConfirm(data)">
+                <input currencyMask class="invalue styleFP" placeholder="Valor a pagar: R$0,00" type="tel" formControlName="valor" (keydown.enter)="onClickConfirm(data)">
 
                 <div style="margin-top: 20px;" *ngIf="data.nome === 'Dinheiro'">
-                    <div style="font-size: 12px;">Troco</div>
-                    <input currencyMask class="styleFPTroco" placeholder="Troco para: R$0,00" type="tel" formControlName="troco" (keydown.enter)="onClickConfirm(data)">
+                    <div class="nonome">Precisa de troco?</div>
+                    <input currencyMask class="invalue styleFPTroco" placeholder="Troco para: R$0,00" type="tel" formControlName="troco" (keydown.enter)="onClickConfirm(data)">
                 </div>
             </div>
             <div class="a-itens-pay" *ngFor="let item of data.itens">
@@ -40,8 +41,8 @@
 </div>
 
 <div class="abt">
-    <button [disabled]="statusBt" mat-flat-button color="primary" (click)="onClickConfirm(data)">Confirmar</button>
-    <div style="font-size: 12px;">
+    <button class="btconfi" [disabled]="statusBt" mat-flat-button color="primary" (click)="onClickConfirm(data)">Confirmar</button>
+    <div style="font-size: 12px; margin-top: 10px; width: 100%;">
         {{ data.descricao }}
     </div>
 </div>
