--- a/src/app/payment-steps/cupons-list/cupons-list.component.css
+++ b/src/app/payment-steps/cupons-list/cupons-list.component.css
@@ -87,4 +87,9 @@
     .c2 {
         margin-left: 2px;
     }
+    .c1 {
+        border-bottom: 1px solid #e8e1e100;
+        display: flex;
+        align-items: center;
+    }
 }
