--- a/src/styles.css
+++ b/src/styles.css
@@ -86,6 +86,21 @@ input {
         background: #3b3b3b;
     }
     .cdk-overlay-dark-backdrop {
-        background: rgba(0, 0, 0, 0.333);
+        background: rgb(255, 255, 255);
+    }
+    .cdk-overlay-pane {
+        max-width: 100% !important;
+        /*height: 100vh;*/
+    }
+    .mat-dialog-container {
+        box-shadow: 0px 11px 15px -7px rgb(255 255 255), 0px 24px 38px 3px rgb(255 255 255), 0px 9px 46px 8px rgb(255 255 255);
+        background: #fff;
+        color: rgba(0, 0, 0, .87);
+    }
+    .cdk-global-overlay-wrapper {
+        /*align-items: normal !important;*/
+    }
+    .mat-dialog-container {
+        padding: 10px;
     }
 }
