--- a/src/app/inicio/home/home.component.html
+++ b/src/app/inicio/home/home.component.html
@@ -6,7 +6,7 @@
 
     <div class="c">
         <div class="logo">
-            <img style="width: 183px;" src="./assets/images/others/logo.png" alt="" srcset="">
+            <img class="logoIMG" src="./assets/images/others/logo.png">
         </div>
         <div class="d">
             Nunca foi tão fácil pedir <span style="font-weight: 600; color: gold;">delivery</span>
@@ -18,7 +18,7 @@
             <div class="g">
                 <a href="javascript:;" class="input" (click)="seleionarEndereco()">
                     <mat-icon>search</mat-icon>
-                    Buscar endereço
+                    Buscar lojas
                 </a>
                 <span class="modoDESK">
                   <a href="javascript:;" class="btSearh" (click)="seleionarEndereco()">
