--- a/src/app/inicio/assessments/assessments.component.html
+++ b/src/app/inicio/assessments/assessments.component.html
@@ -27,7 +27,7 @@
     </div>
     <div class="item-assessment-3 col-sm-12"> {{ item.texto }} </div>
     <div class="item-assessment-4 col-sm-12">
-        <div *ngIf="item.resposta">
+        <div *ngIf="item.resposta" class="pitad">
             <span *ngIf="item.nome" class="cpow">Resposta -</span>
             <ngx-skeleton-loader animation="pulse" *ngIf="!item.nome"></ngx-skeleton-loader>
             <span *ngIf="item.nome">{{ service.getDadosEmpresa().nome }}</span>
