--- a/src/app/inicio/itens-merchant/itens-merchant.component.html
+++ b/src/app/inicio/itens-merchant/itens-merchant.component.html
@@ -29,9 +29,13 @@
             {{ service.getDadosEmpresa().descricao }}
         </div>
 
-        <!--<div class="c3 col-sm-12 mp0L dad">
-            {{ service.getDadosEmpresa().seguimento }} • {{ service.getDadosEmpresa().tempoentrega }}
-        </div>-->
+        <div class="c3 col-sm-12 mp0L dad" *ngIf="service.getDadosEmpresa().nome">
+            <!--{{ service.getDadosEmpresa().seguimento }} • {{ service.getDadosEmpresa().tempoentrega }}-->
+            <div class="icstatus" *ngIf="service.getDadosEmpresa().status_delivery === true"> Aberto </div>
+            <div class="icstatusOFF offs" *ngIf="service.getDadosEmpresa().status_delivery === false"> Fechado </div>
+
+            <div class="icprom" *ngIf="service.getDadosEmpresa().desconto && service.getDadosEmpresa().desconto.statusPromocao"> {{ service.getDadosEmpresa().desconto.desconto }}% OFF </div>
+        </div>
 
 
         <div class="c4 col-sm-12 mp0L" style="margin-bottom: 10px;" *ngIf="service.showInfoStore">
@@ -124,7 +128,7 @@
             <div class="row mp0R">
                 <div style="padding: 10px;" class="col-sm-6 " *ngFor="let product of item.itens | filterId:formProd.controls.filtro.value">
                     <a href="javascript:;" style="text-decoration: none;">
-                        <div class="item col-sm-12" (click)="openItem(product)">
+                        <div class="item col-sm-12" (click)="openItem(product)" [id]="'itemloja_' + product.id">
                             <div class="row">
 
 
@@ -172,7 +176,7 @@
     <!--produtos para mobile-->
 
     <div *ngFor="let item of service.getDadosEmpresa().categorias | name:catalogoFilter.value.filtro" class="elementMobileShow">
-        <div class="stycatItem">
+        <div class="stycatItem" [id]="'cat_id_' + item.id">
             {{ item.nome }}
         </div>
 
