--- a/src/app/multLojas/lojas/lojas.component.css
+++ b/src/app/multLojas/lojas/lojas.component.css
@@ -118,9 +118,9 @@
     position: fixed;
     z-index: 10;
     border-bottom: 1px solid white;
-    -webkit-box-shadow: 9px 7px 5px rgb(50 50 50 / 77%);
+    /*-webkit-box-shadow: 9px 7px 5px rgb(50 50 50 / 77%);
     -moz-box-shadow: 9px 7px 5px rgba(50, 50, 50, 0.77);
-    box-shadow: 1px 2px 5px rgb(255 255 255);
+    box-shadow: 1px 2px 5px rgb(255 255 255);*/
 }
 
 .t1 {
